tests/miniJava/pos/001089_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) System.out.println ( { } ) ; else java = 0 ; } }
