tests/miniJava/neg/001091_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new class [ 0 ] ; } }
